--- a/src/assets/css/tailwind.css
+++ b/src/assets/css/tailwind.css
@@ -971,26 +971,26 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6{
   display: block;
   padding: 0.75rem;
   --tw-text-opacity: 1;
-  color: rgb(15 23 42 / var(--tw-text-opacity));
+  color: rgb(127, 236, 52, 1);
 }
 .navbar .navigation .navbar-nav .nav-link:hover{
   --tw-text-opacity: 1;
-  color: rgb(234 88 12 / var(--tw-text-opacity));
+  color: rgb(127, 236, 52, 1);
 }
 :is(.dark .navbar .navigation .navbar-nav .nav-link){
-  color: rgb(255 255 255 / 0.6);
+  color: rgb(127, 236, 52, 1);
 }
 :is(.dark .navbar .navigation .navbar-nav .nav-link:hover){
   --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
+  color: rgb(127, 236, 52, 1);
 }
 .navbar .navigation .navbar-nav .active .nav-link{
   --tw-text-opacity: 1;
-  color: rgb(234 88 12 / var(--tw-text-opacity));
+  color: rgb(127, 236, 52, 1);
 }
 :is(.dark .navbar .navigation .navbar-nav .active .nav-link){
   --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
+  color: rgb(127, 236, 52, 1);
 }
 .navbar .navbar-brand{
   -webkit-margin-end: 3rem;
@@ -1110,7 +1110,7 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6{
   }
   .navbar.is-sticky .navbar-nav.nav-light .nav-link:hover{
     --tw-text-opacity: 1;
-    color: rgb(234 88 12 / var(--tw-text-opacity));
+    color: rgb(52, 153, 236, 1);
   }
   :is(.dark .navbar.is-sticky .navbar-nav.nav-light .nav-link){
     color: rgb(255 255 255 / 0.6);
@@ -1121,7 +1121,8 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6{
   }
   .navbar.is-sticky .navbar-nav.nav-light .active .nav-link{
     --tw-text-opacity: 1;
-    color: rgb(234 88 12 / var(--tw-text-opacity));
+    /* color: rgb(127, 236, 52, 1); */
+    color: rgb(52, 153, 236, 1);
   }
   :is(.dark .navbar.is-sticky .navbar-nav.nav-light .active .nav-link){
     --tw-text-opacity: 1;
